adicionando um novo arquivo html para cadrasto

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ body {
   padding: 12px;
   border: none;
   border-radius: 8px;
-  background: linear-gradient(90deg, #ff8c42, #ffb347);
+  background: linear-gradient(90deg, #f18013, #f8a126);
   color: #fff;
   font-weight: bold;
   cursor: pointer;
