--- a/aluno.css
+++ b/aluno.css
@@ -18,7 +18,7 @@ body {
 /* --- SIDEBAR --- */
 .sidebar {
   width: 250px;
-  background: url("imagens/Fundo_Professor.png")no-repeat center center fixed;
+  background: linear-gradient(180deg, #19257a, #1663c2);
   padding: 30px 20px;
   display: flex;
   flex-direction: column;
