--- a/aluno.css
+++ b/aluno.css
@@ -194,3 +194,26 @@ body {
   background-color: rgba(255, 255, 255, 0.08);
   transition: 0.2s;
 }
+
+/* Esconde o input de arquivo */
+#inputFoto {
+  display: none;
+}
+
+/* Estilo do botão */
+#btnTrocarFoto {
+  padding: 8px 16px;
+  background: #ffaa3b;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  color: #fff;
+  font-weight: 600;
+  transition: .3s;
+  display: inline-block;
+  margin-top: 10px;
+}
+
+#btnTrocarFoto:hover {
+  background: #ff9022;
+}
